--- a/src/styles/movings.module.scss
+++ b/src/styles/movings.module.scss
@@ -15,6 +15,15 @@
 	}
 }
 
+.moving-link {
+	text-decoration: none;
+	color: black;
+
+	&:hover {
+		color: black;
+	}
+}
+
 .moving-box {
 	@extend .card;
 
