--- a/src/styles/createMoving.module.scss
+++ b/src/styles/createMoving.module.scss
@@ -6,6 +6,13 @@
 		&.creating {
 			text-align: center;
 		}
+
+		.title {
+			font-size: 20px;
+			font-weight: 500;
+			padding-bottom: 16px;
+			display: block;
+		}
 	}	
 
 	h2 {
